fix spacing between navbar menu links

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -7,6 +7,7 @@
 .row {
   height: 100%;
   min-height: 30px;
+  flex-wrap: wrap;
 }
 
 nav {
@@ -35,8 +36,17 @@ nav {
   background-repeat: no-repeat;
 }
 
-.navbar div {
+.navbar {
+  overflow: auto;
+}
+
+.navbar a {
   cursor: pointer;
+  float: left;
+  text-align: center;
+  margin: auto;
+  text-decoration: none;
+  color: inherit;
 
   &:hover,
   &.active {
@@ -48,9 +58,12 @@ nav {
   }
 }
 
-a {
-  text-decoration: none;
-  height: 100%;
-  width: 100%;
-  color: inherit;
+// Todo: implementar menu lateral
+@media (max-width: 1024px) {
+  .navbar a {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+  }
 }
